solve the overlaping issue of page content

--- a/src/index.css
+++ b/src/index.css
@@ -27,11 +27,9 @@ main {
 
 .mobile--main {
   position: absolute;
-  /* top: 0; */
-  /* padding-top: 50px; */
-  /* margin-bottom: 50px; */
-  height: 100px;
   width: 100%;
+
+  z-index: 1;
 }
 
 .nav {
@@ -143,6 +141,8 @@ main {
   align-items: center;
   width: 100%;
 
+  z-index: 2;
+
   background-color: white;
 }
 
@@ -159,6 +159,7 @@ main {
   align-items: center;
   width: 100%;
   background-color: white;
+  z-index: 2;
 }
 
 .profilepage {
